<resources>
    <string name="app_name">Cypher Text</string>

    <string name="orginal_label">Orginal:  </string>
    <string name="encrypt_label">Encrypted:  </string>
    <string name="text_size">30dp</string>
    <string name="button_encrypt">Encrypt</string>

    <string name="button_shift">Set Shift</string>
    <string name="shift_label">Shift:  </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shift">ShiftActivity</string>
    <string name="back_button">Back</string>


    <string name="hello_world">Hello world!</string>
</resources>