<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/app_name"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="50dp"
        android:text = "@string/app_name"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/button_shift"
        android:onClick="modifyData"
        android:id="@+id/button"
        android:background="#DEDEDE"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingTop= "5dp"
        android:id="@+id/orginal_label"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="30dp"
        android:text = "@string/orginal_label"
        android:layout_below="@+id/app_name"
        android:background="#DEDEDE"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:paddingTop= "5dp"
        android:id="@+id/orginal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/orginal_label"
        android:layout_alignBottom="@+id/orginal_label"
        android:inputType="text"
        android:textSize="30dp"
        android:background="#DEDEDE"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/encrypt_label"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="30dp"
        android:paddingBottom="5dp"
        android:text = "@string/encrypt_label"
        android:paddingTop = "20dp"
        android:background="#DEDEDE"
        android:layout_below="@+id/orginal_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/encrypt_text"
        android:paddingTop= "20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_toRightOf="@+id/encrypt_label"
        android:layout_alignBottom="@+id/encrypt_label"
        android:textSize="30dp"
        android:background="#DEDEDE"
        android:text=""
        android:textColor="#FF0000"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:text="@string/button_encrypt"
        android:background="#DEDEDE"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="encrypt"
        android:layout_below="@+id/encrypt_label" />


</RelativeLayout>
