<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.i.cs_305_project2.ShiftActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/back_button"
        android:onClick="goBack"
        android:background="#DEDEDE"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/orginal_label"
        android:paddingTop= "5dp"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="30dp"
        android:text = "@string/shift_label"
        android:background="#DEDEDE"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/back_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:paddingTop= "5dp"
        android:id="@+id/shift_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/orginal_label"
        android:layout_alignBottom="@+id/orginal_label"
        android:inputType="number"
        android:textSize="30dp"
        android:background="#DEDEDE"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/bencrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:textSize="25dp"
        android:paddingLeft="10dp"
        android:text="@string/button_shift"
        android:background="#DEDEDE"
        android:layout_marginTop="44dp"
        android:onClick="set_shift"
        android:layout_below="@+id/shift_text"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
